# noise-ai

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  prd-noise-ai.md
app/: project.yml
app/Sources/App/: AppDelegate.swift  AudioManager.swift  Info.plist  NoiseApp.swift
app/Sources/Bridge/: NoiseApp-Bridging-Header.h
app/Sources/Models/: DeviceManager.swift  EngineState.swift  Preferences.swift
app/Sources/Views/: MenuBarView.swift  SettingsView.swift  SetupWizardView.swift
bridge/: CMakeLists.txt
bridge/include/: noise_bridge.h
bridge/src/: noise_bridge.cpp
cmake/: FindONNXRuntime.cmake  utils.cmake
driver/: CMakeLists.txt  Info.plist.in
driver/src/: device.cpp  device.hpp  io_handler.cpp  io_handler.hpp  plugin.cpp
engine/: CMakeLists.txt
engine/include/noise/: deepfilter.h  engine.h  inference.h  resampler.h  ring_buffer.h  shared_ring_buffer.h  stft.h  types.h
engine/src/: deepfilter.cpp  engine.cpp  inference.cpp  post_process.cpp  resampler.cpp  ring_buffer.cpp  shared_ring_buffer.cpp  stft.cpp
engine/tests/: CMakeLists.txt  test_ring_buffer.cpp
installer/macos/: distribution.xml
installer/macos/resources/: conclusion.html  welcome.html
installer/macos/scripts/: postinstall
scripts/: install_deps.sh  install_driver.sh  uninstall.sh  uninstall_driver.sh
tasks/: todo.md
